test/corpus/strings.txt
============================================================================+++
Message with Strings
============================================================================+++
# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/Strings.msg

string string_value
string string_value_default1 "Hello world!"
string string_value_default2 "Hello'world!"
string string_value_default3 'Hello"world!'
string string_value_default4 'Hello\'world!'
string string_value_default4b HELLO_WOLRD
string string_value_default5 "Hello\"world!"
string string_value_default6 "Hello\"world!" # Here is comment
string string_value_default7 HELLO_WOLRD # Here is comment
string STRING_CONST="Hello world!"
string<=22 bounded_string_value
string<=22 bounded_string_value_default1 "Hello world!"
string<=22 bounded_string_value_default2 "Hello'world!"
string<=22 bounded_string_value_default3 'Hello"world!'
string<=22 bounded_string_value_default4 'Hello\'world!'
string<=22 bounded_string_value_default5 "Hello\"world!"

# Based on: https://github.com/ros2/test_interface_files/blob/rolling/msg/WStrings.msg

wstring wstring_value
wstring wstring_value_default1 "Hello world!"
wstring wstring_value_default2 "Hellö wörld!"
wstring wstring_value_default3 "ハローワールド"
#wstring WSTRING_CONST="Hello world!"
#wstring<=22 bounded_wstring_value
#wstring<=22 bounded_wstring_value_default1 "Hello world!"
wstring[3] array_of_wstrings
wstring[<=3] bounded_sequence_of_wstrings
wstring[] unbounded_sequence_of_wstrings

----------------------------------------------------------------------------+++

(source_file
  (line_comment)
  (message
    (field
      type: (primitive_type (string_type))
      name: (identifier))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (inline_comment)
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (inline_comment)
    (constant
      type: (primitive_type (string_type))
      name: (const_identifier)
      (constant_separator)
      value: (string))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type
        (string_type (upper_bound_specifier) (integer)))
      name: (identifier)
      default: (string))
    (line_comment)
    (field
      type: (primitive_type (string_type))
      name: (identifier))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (field
      type: (primitive_type (string_type))
      name: (identifier)
      default: (string))
    (line_comment)
    (line_comment)
    (line_comment)
    (field
      type: (primitive_type (string_type))
      type: (array (integer))
      name: (identifier))
    (field
      type: (primitive_type (string_type))
      type: (array (upper_bound_specifier) (integer))
      name: (identifier))
    (field
      type: (primitive_type (string_type))
      type: (array)
      name: (identifier))))

============================================================================+++
Faulty String Bounds (Space before indicator)
:error
============================================================================+++
# This is not allowed
string <=4 kaas

----------------------------------------------------------------------------+++

============================================================================+++
Faulty String Bounds (Space before number)
:error
:skip
============================================================================+++
# This is not allowed
string<= 4 kaas

----------------------------------------------------------------------------+++

============================================================================+++
Integers are not Strings
============================================================================+++
int16 decimal_field_alt      10  # Is this still an integer?
int16 decimal_field_alt_neg -10  # Is this still an integer?

----------------------------------------------------------------------------+++
(source_file
  (message
    (field
    type: (primitive_type)
    name: (identifier)
    default: (integer))
    (inline_comment)
    (field
      type: (primitive_type)
      name: (identifier)
      default: (integer))
    (inline_comment)))

============================================================================+++
Booleans are not Strings
============================================================================+++
bool field_a_true true
bool field_a_false false
bool field_b_true True
bool field_b_false False
---
bool field_c_true true    # Some comment
bool field_c_false false  # Some comment
bool field_d_true True    # Some comment
bool field_d_false False  # Some comment

----------------------------------------------------------------------------+++
(source_file (service
  (request
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool)))
  (separator)
  (response
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (inline_comment)
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (inline_comment)
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (inline_comment)
    (field
      type: (primitive_type)
      name: (identifier)
      default: (bool))
    (inline_comment))))
